--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -176,10 +176,7 @@ SubmittedLeadScreen As screen:
                     =//If(cumulatively=true,
                     // )],yearly=true,[Text( Year(Now()))])
                     
-                          //  First(Filter(LeadInformations,Email=User().Email)).Year('Created On')
-                    If(cumulatively=true,/* [ 
-                    Year(First(Filter(LeadInformations,Email=User().Email)).'Created On'),
-                       // First(Filter(LeadInformations,Email=User().Email)),*/
+                    If(cumulatively=true,
                        [Text( Year(Today())),
                         Text( Year(Today())-1),
                         Text( Year(Today())-2),
@@ -192,9 +189,6 @@ SubmittedLeadScreen As screen:
                         Text(Year(Today())-9),
                         Text(Year(Today())-10),
                         Text(Year(Today())-11)]
-                        //Year(First(Filter(LeadInformations,Email=User().Email)).'Created On'),
-                        //Year(First(Filter(LeadInformations,Email=User().Email)).'Created On')]*/
-                       // If(VarStartingYear < Year(Now()),Value(VarStartingYear)+1)
                         ,yearly=true,[Text( Year(Today()))])
                 Layout: =Layout.Vertical
                 LoadingSpinner: =LoadingSpinner.Data
