--- a/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
@@ -632,12 +632,13 @@ ImageUploadScreen As screen:
 
         Container5 As groupContainer.manualLayoutContainer:
             Fill: =RGBA(255, 255, 255, 1)
-            Height: =Parent.Height/2
+            Height: =If(Parent.Width>500,Parent.Height/2,Parent.Width>1000,Parent.Height/3,Parent.Height/3)
             PaddingLeft: =5
             PaddingRight: =5
-            Width: =Parent.Width/1.2
+            Width: |
+                =If(Parent.Width>500,Parent.Width/2,Parent.Width>1000,Parent.Width/4,Parent.Width/1.2)
             X: =(Parent.Width-Self.Width)/2
-            Y: =(Parent.Height-Parent.Width)/2
+            Y: =If(Parent.Width>500,Parent.Height/4,Parent.Width>1000,Parent.Height/2,(Parent.Height-Parent.Width)/2)
             ZIndex: =1
 
             Image2 As image:
