--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -662,8 +662,8 @@ UnitScreen As screen:
 
         Rectangle1_4 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
-            Height: =Parent.Height/3
-            Width: =Parent.Width/1.2
+            Height: =If(Parent.Height<500,Parent.Height/1.5,Parent.Height/3)
+            Width: =If(Parent.Width<1000,Parent.Width/1.2,Parent.Width/2)
             X: =(Parent.Width-Self.Width)/2
             Y: =(Parent.Height-Self.Height)/2
             ZIndex: =1
